sfdc-integration-accelerator/src/objects/MuleEventQueue__c/MuleEventQueue__c.object-meta.xml
<CustomObject>
    <description>All mule events that triggered the life-cycle of an integration.</description>
    <label>Mule Event Queue</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Mule Event Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mule Event Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>