sfdc-integration-accelerator/src/objects/MuleEventQueue__c/fields/InternalError__c.field-meta.xml
<CustomField>
    <fullName>InternalError__c</fullName>
    <description>If Apex classes threw an exception during the process of the integration, the error message and stack trace will be filled here</description>
    <label>Internal Error</label>
    <length>2042</length>
    <type>LongTextArea</type>
</CustomField>