sfdc-integration-accelerator/src/objects/MuleEventQueue__c/fields/IsRetryBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsRetryBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this event was retryed the limit number of retries or if another event was created for the same record this field will be checked automatically by the framework</description>
    <label>IsRetryBlocked</label>
    <type>Checkbox</type>
</CustomField>