sfdc-integration-accelerator/src/objects/MuleEventQueue__c/fields/MuleIntegrationName__c.field-meta.xml
<CustomField>
    <fullName>MuleIntegrationName__c</fullName>
    <description>Mule Integration custom metadata name. This is a constant used in the integration architecture.</description>
    <label>MuleIntegrationName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>