sfdc-integration-accelerator/src/objects/MuleEventQueue__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Payload that will be published and builded by Salesforce integration architecture.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>