sfdc-integration-accelerator/src/objects/MuleEventQueue__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Id of the master record that will be integrated</description>
    <label>RecordId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>