sfdc-integration-accelerator/src/objects/MuleEventQueue__c/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of retries</description>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>