sfdc-integration-accelerator/src/objects/MuleEventQueue__c/fields/ReturnedPayload__c.field-meta.xml
<CustomField>
    <fullName>ReturnedPayload__c</fullName>
    <description>Returned payload that will be upserted by MuleSoft automatically</description>
    <label>Returned Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>