sfdc-integration-accelerator/src/objects/MuleEventQueue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PENDING</fullName>
                <default>true</default>
                <label>PENDING</label>
            </value>
            <value>
                <fullName>SENT</fullName>
            </value>
            <value>
                <fullName>CANCELED</fullName>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>WAITING</fullName>
            </value>
            <value>
                <fullName>TECHNICAL_ERROR</fullName>
            </value>
            <value>
                <fullName>BUSINESS_ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>