sfdc-integration-accelerator/src/objects/MuleEventQueue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MuleIntegrationName__c</columns>
    <columns>RecordId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>RetryCount__c</columns>
    <columns>IsRetryBlocked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>CANCELED</value>
    </filters>
    <label>All</label>
</ListView>